Name:                       luach
Build-type:                 Simple
Version:                    0.2.0
Cabal-Version:              >= 1.2

Flag production
    Description:   Build the production executable.
    Default:       False

Executable luach
  Main-is:                  luach.hs
  Build-depends:            base > 4 && < 5,
                            yesod >= 0.8 && < 0.9,
                            wai-extra,
                            data-object >= 0.3.1.2 && < 0.4,
                            data-object-json >= 0.3.1.1 && < 0.4,
                            data-object-yaml >= 0.3.1 && < 0.4,
                            web-encodings >= 0.3.0 && < 0.4,
                            time,
                            hebrew-time,
                            attempt >= 0.3.0 && < 0.4,
                            old-locale,
                            predicates,
                            convertible-text >= 0.3.0.1 && < 0.4,
                            safe-failure >= 0.5 && < 0.6,
                            random,
                            persistent,
                            persistent-postgresql,
                            template-haskell,
                            warp,
                            yesod-static == 0.1.*,
                            yesod-json,
                            yesod-form == 0.1.*,
                            yesod-newsfeed,
                            yesod-auth == 0.4.*,
                            mime-mail,
                            text,
                            authenticate >= 0.9.1.2,
                            hamlet
  if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
  else
        ghc-options:   -Wall -Werror -threaded -O0

