Name:                       luach
Build-type:                 Simple
Version:                    0.2.0
Cabal-Version:              >= 1.2

Flag production
    Description:   Build the production executable.
    Default:       True

Executable luach
  Main-is:                  luach.hs
  Build-depends:            base > 4 && < 5,
                            yesod >= 1.1 && < 1.3,
                            wai-extra,
                            yaml,
                            time,
                            hebrew-time,
                            attempt >= 0.4.0 && < 0.5,
                            old-locale,
                            predicates,
                            safe-failure,
                            shakespeare-text,
                            random,
                            persistent,
                            persistent-postgresql,
                            template-haskell,
                            warp,
                            yesod-static,
                            yesod-json,
                            yesod-form,
                            yesod-newsfeed,
                            yesod-auth,
                            mime-mail,
                            text,
                            authenticate,
                            shakespeare-js,
                            shakespeare-css,
                            transformers,
                            blaze-html,
                            http-conduit,
                            hamlet,
                            shakespeare,
                            aeson,
                            vector,
                            monad-logger
  if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
  else
        ghc-options:   -Wall -Werror -threaded -O0

