Name:                       luach
Build-type:                 Simple
Version:                    0.2.0
Cabal-Version:              >= 1.2

Flag production
    Description:   Build the production executable.
    Default:       True

Executable luach
  Main-is:                  luach.hs
  Build-depends:            base > 4 && < 5,
                            yesod,
                            wai-extra,
                            yaml,
                            time,
                            hebrew-time,
                            shakespeare,
                            random,
                            persistent,
                            persistent-postgresql,
                            template-haskell,
                            warp,
                            yesod-static,
                            yesod-form,
                            yesod-newsfeed,
                            yesod-auth,
                            mime-mail,
                            text,
                            authenticate,
                            transformers,
                            blaze-html,
                            http-conduit,
                            aeson,
                            vector,
                            bytestring,
                            monad-logger
  if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
  else
        ghc-options:   -Wall -Werror -threaded -O0

  other-modules:         App
                         Model
                         Occurrence
                         Settings
                         StaticFiles
